--- a/docs/index.css
+++ b/docs/index.css
@@ -13,7 +13,13 @@ body {
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:100px;
-	font-size:14px;
+	font-size:16px;
+}
+
+@media (max-width:600px) {
+	#console {
+		font-size:24px;
+	}
 }
 
 a {
