--- a/docs/index.css
+++ b/docs/index.css
@@ -13,14 +13,14 @@ body {
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:100px;
-	font-size:16px;
+	font-size:32px;
 }
 
-@media (max-width:600px) {
+/*@media (max-width:600px) {
 	#console {
 		font-size:24px;
 	}
-}
+}*/
 
 a {
 	color: #0bc;
