--- a/docs/index.css
+++ b/docs/index.css
@@ -9,18 +9,12 @@ body {
 #console {
 	font-family: courier, monospace;
 	color: #fff;
-	/*width:750px;*/
+	width:750px;
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:100px;
 	font-size:16px;
 }
-
-/*@media (max-width:600px) {
-	#console {
-		font-size:24px;
-	}
-}*/
 
 a {
 	color: #0bc;
