--- a/docs/index.css
+++ b/docs/index.css
@@ -9,11 +9,16 @@ body {
 #console {
 	font-family: courier, monospace;
 	color: #fff;
-	width:750px;
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:100px;
 	font-size:16px;
+}
+
+media (min-width: 800px) {
+	#console {
+		width: 750px;
+	}
 }
 
 a {
