--- a/docs/index.css
+++ b/docs/index.css
@@ -719,3 +719,24 @@ terminal .terminal-output > div {
         color: #000;
     }
 }
+@media (min-width: 599px) {
+    /* This will hide the default scrollbar */
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    /* This will create a new track piece */
+    ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+
+    /* This will create a new thumb piece */
+    ::-webkit-scrollbar-thumb {
+        background: #888;
+    }
+
+    /* Change the scrollbar thumb color on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
+}
