adjusted white-space property to close edge cases of text not wrapping

--- a/docs/index.css
+++ b/docs/index.css
@@ -140,6 +140,7 @@
  }
 .terminal, .cmd {
     overflow-wrap: break-word;
+    max-width: 100%;
 }
  .terminal .cmd, .terminal .cmd div {
      background: transparent !important;
@@ -238,7 +239,7 @@
      height: auto;
  }
  .terminal .terminal-output > div:not(.raw) div {
-     white-space: nowrap;
+     white-space: normal;
      clear: both;
  }
  .cmd .cmd-prompt > span, .cmd .cmd-prompt > a, .cmd .cmd-prompt:empty {
@@ -1048,7 +1049,7 @@
  }
  .cmd .cursor-wrapper li {
      cursor: pointer;
-     white-space: nowrap;
+     white-space: normal;
  }
  .cmd .cursor-wrapper li:hover {
      background: #aaa;
